<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idcard_controller_tv_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idcard_controller_tv_sex"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewNation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idcard_controller_tv_ethnic"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idcard_controller_tv_birth"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageViewPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/face" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idcard_controller_tv_address"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewPIDNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idcard_controller_tv_idnumber"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewGrantDept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idcard_controller_tv_authority"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewUserLife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idcard_controller_tv_period"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonReadCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idcard_controller_btn_readcard_2" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idcard_controller_btn_disconnect" />

        <Button
            android:id="@+id/btnSavePower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goto_power_saving_mode"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnWorkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goto_work_mode"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnReadOnce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idcard_controller_btn_readcard" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idcard_controller_btn_readcard"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible" >

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/idcard_count"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvSuccessCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/idcard_count_success"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvFailCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/idcard_count_failed"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- TODO 已隐藏，不清楚填入的是什么 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:visibility="gone"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/SoftWareVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:ems="10"
            android:gravity="bottom" >
        </TextView>
    </LinearLayout>

</LinearLayout>